# shelper

./: README.md  pyproject.toml
src/shelper/: __init__.py  cli.py
